--- a/glow.css
+++ b/glow.css
@@ -2,7 +2,7 @@
 	position: relative;
 	width: 250px;
 	height: 250px;
-    background-image: url("https://lyeliect.sirv.com/Images/file-BN9GWbNfRgC6MPFv1foZkz.webp");
+    background-image: url("https://lyeliect.sirv.com/Images/NO%20LOGO%20YET.png");
     background-size: cover;
 	-webkit-border-radius: 50%;
 	   -moz-border-radius: 50%;
