--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url("https://res.cloudinary.com/dye3ddhkt/image/upload/v1736688732/saturnbackground2_a5ovjj.jpg");
+    background-image: url("background.gif");
     color: #fff;
     background-size: cover;
     background-position: center;
